--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,13 +14,17 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.fly1ncu.mysteryofanimation.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".Mystery1Activity" >
+        </activity>
+        <activity android:name=".Mystery2Activity" >
         </activity>
     </application>
 
